# movy

./: .gitignore  README.md  classes.py  history.txt  historya.txt  main.py  movy.py  parsing.py  pyproject.toml  runner.py  script.movy  script.txt  settings.yaml  setup.py  similarity.py  test.py  test_document.py  test_main.py  utils.py
movy/: __main__.py  classes.py  compile.bat  movy.py  parsing.py  similarity.py  utils.py
movy/actions/: __init__.py  echo.py  move.py  prompt.py  set_defaults.py  terminal.py  trash.py
movy/classes/: __init__.py  block.py  command.py  content.py  exceptions.py  history.py  pipe.py
movy/pt_core_news_sm-3.4.0.dist-info/: RECORD
movy/rules/: __init__.py  basename.py  extension.py  file.py  filecontent.py  hasproperty.py  ifexpression.py  keywords.py  path.py  pdf_template.py
script_tests/: first.movy
