[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="movy"
version="1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
authors=[{ name = "AlanJS26", email = "alanjoses.29@gmail.com" }]
description="organize all your files programmatically"
keywords = ["python", "files", "cli", "organize"]
requires-python = ">=3.10"

dependencies = []

[project.urls]
Homepage="https://github.com/AlanJs26/movy"

[project.scripts]
movy = "movy.__main__:main"
